--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,16 @@ development:
   adapter: sqlite3
   database: db/development.sqlite3
   pool: 5
-  timeout: 5000
+  timeout: 5000	
+
+  #adapter: postgresql
+  #encoding: unicode
+  #database: stampgraff_db
+  #pool: 5
+  #username: 'postgres'
+  #password: '1234'
+  #timeout: 5000
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
